# Umufasha

./: .dockerignore  .env.example  .gitignore  1.TO DO LIST.txt  AI_DISPLAY_AND_CLEAR_FEATURES.md  AI_ON_DEMAND_FEATURE.md  API_KEY_SETUP.md  ARCHITECTURE.md  BARK_TTS_OPTIMIZATION.md  BRAINSTORM_MODE_FIXES.md  CHANGELOG.md  CLAUDE_API_SETUP.md  CODING_ENVIRONMENT_INTEGRATION.md  COMPLETE_GRAPH_FIX.md  CONTRIBUTING.md  CORE_DEVICES_CHECKLIST_ENHANCEMENT.md  CORE_DEVICES_COMPANY_README.md  CURSOR_CLONE_COMPLETE.md  DEBUG_DOCKER_COMPOSE_FIX.md  DEPLOYMENT.md  DOCKER_FIX_TEST_INSTRUCTIONS.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  EXAMPLES.md  FIX_WRITER_LOCAL_LLM.md  GRAPH_FIX_SUMMARY.md  GRAPH_RENDERING_FIX.md  GRAPH_SYSTEM_COMPLETE.md  GRAPH_TEST_INSTRUCTIONS.md  GRAPH_UI_FIX.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY_GRAPH.md  INDEX.md  INTEGRATION_COMPLETE.md  INTEGRATION_NOTES_WRITER.md  KNOWLEDGE_GRAPH_FIX.md  LICENSE  LOCAL_AI_INTEGRATION.md  LOCAL_AI_SETUP.md  MINDMAPPER_INTEGRATION.md  (+94 more)
coding-environment/coding-workspace-service/: pyproject.toml  requirements.txt
coding-environment/coding-workspace-service/cws/: main.py
coding-environment/coding-workspace-service/cws/internal/: __init__.py
coding-environment/coding-workspace-service/docs/: POLICY.md
coding-environment/coding-workspace-service/tests/e2e/: test_workflow.py
coding-environment/coding-workspace-service/tests/integration/: __init__.py  test_server.py
coding-environment/coding-workspace-service/tests/unit/: test_fs.py
mcp/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_BRAIN.md  README.md  SBOM.json  __init__.py  pyproject.toml  server.py
mcp/capabilities/: __init__.py
mcp/capabilities/prompts/: __init__.py  assistant_prompts.py  base.py
mcp/capabilities/resources/: __init__.py  assistant_resources.py  base.py
mcp/capabilities/tools/: app_management.py  assistant_tools.py  base.py  coding_environment.py  comprehensive_tools.py
mcp/capabilities/tools/coding_environment/: __init__.py  coding_environment.py  path_utils.py  policy.py
mcp/core/: __init__.py  concurrency.py  errors.py  middleware.py  router.py  validation.py
mcp/core/protocol/: __init__.py  messages.py
mcp/core/protocol/schemas/: __init__.py
mcp/core/transport/: __init__.py  stdio.py  websocket.py
mcp/docs/: ADD_USER_GUIDE.md  CODING_ENVIRONMENT.md  CODING_ENVIRONMENT_EXAMPLES.md  DEPLOYMENT.md  DESIGN_NOTES.md  HOW_IT_WORKS.md  INDEX.md  INSTALLATION.md  MCP_AS_BRAIN.md  MESSAGE_CATALOG.md  MESSAGE_CATALOG_CODING_ENV.md  QUICKSTART.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  USING_CODING_ENVIRONMENT.md  WEBSOCKET_TESTING.md
mcp/examples/: __init__.py  add_user_example.sh  coding_env_client.py  file_editor_simple.py  hello-client.py  mcp_brain_demo.py  test_websocket.py  web_file_browser.py
mcp/ops/: Dockerfile  __init__.py  docker-compose.yml  k8s-deployment.yaml  systemd.service
mcp/plugins/cursor_clone/: CHATGPT_INTEGRATION.md  EXAMPLES.md  Makefile  QUICKSTART.md  README.md  __init__.py  requirements.txt
mcp/plugins/cursor_clone/agent/: __init__.py  chat.py  editor.py  planner.py  repo_indexer.py  tools.py
mcp/plugins/cursor_clone/exec/: runner.py  (+1 more)
mcp/scripts/: check_webapp.sh
mcp/security/: hardening.md  threat-model.md
mcp/tests/: __init__.py
mcp/tests/e2e/: test_server.py
mcp/tests/unit/: test_messages.py
(+412 files in other folders)
